# ai-devops-agent

./: .gitignore  README.md  pyproject.toml
backend/: config.py  db.py  events_bus.py  main.py
backend/api/: alerts.py  diagnosis.py  metrics.py  remediation.py  stream.py
backend/connectors/: mock_sentry.py
backend/detection/: engine.py
backend/rca/: llm_rca.py
backend/remediation/: generator.py
backend/scenarios/: code_exception.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: AlertNav.tsx
frontend/src/pages/: AlertDashboard.tsx  ApprovalScreen.tsx  DiagnosisPanel.tsx  InvestigationView.tsx  RemediationPanel.tsx
sample_service/: buggy_service.py
